<resources>
    <string name="app_name">My ToDos</string>
    <string name="action_settings">Settings</string>

    <!-- Menu Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="long_lorem_ipsum">
        Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.
        \n\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat massa. Praesent sit amet lacinia augue, mollis tempor dolor.
    </string>
    <string name="hint_1">Встаю утром</string>
    <string name="hint_2">душ</string>
    <string name="hint_3">завтрак</string>
    <string name="hint_4">Работаю</string>
    <string name="hint_5">English</string>
    <string name="hint_6">Gym</string>
    <string name="hint_7">см Блоги</string>
    <string name="hint_8">Мой апп</string>
    <string name="hint_9">Худ литра, история</string>
    <string name="time_1">8.00</string>
    <string name="time_2">23.00</string>
    <string name="title">Title</string>
    <string name="create_category">CREATE CATEGORY</string>

    <string name="image_picker_provider_authority_suffix">.provider</string>
    <string name="bg_image">bg_image</string>

</resources>
