<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/spacing_large"
    android:layout_marginRight="@dimen/spacing_large">

    <TextView
        style="@style/AppTheme.Time.Shadow"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_1" />

    <TextView
        style="@style/AppTheme.Time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_1" />

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_large"
        android:paddingRight="@dimen/spacing_large"
        android:paddingBottom="@dimen/spacing_large">

        <TextView
            style="@style/AppTheme.SubTitle"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="@string/hint_1" />

        <TextView
            style="@style/AppTheme.SubTitle"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="@string/hint_2" />

        <TextView
            style="@style/AppTheme.SubTitle"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="@string/hint_3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>