<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/spacing_large"
    android:layout_marginRight="@dimen/spacing_large"
    app:cardBackgroundColor="@color/transparent"
    app:cardCornerRadius="15dp"
    app:cardElevation="2dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_large"
        android:paddingRight="@dimen/spacing_large"
        android:paddingBottom="@dimen/spacing_large">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:text="@string/hint_4"
            android:textColor="@color/grey_80"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:text="@string/hint_5"
            android:textColor="@color/grey_80"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:text="@string/hint_6"
            android:textColor="@color/grey_80"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>